change command syntax

--- a/example-pipeline.gocd.yml
+++ b/example-pipeline.gocd.yml
@@ -19,5 +19,5 @@ pipelines:
             docker-stuff:
               tasks:
                 - exec:
-                    command: docker -v
-
+                    command: docker
+                    arguments: -v
