--- a/example-pipeline.gocd.yml
+++ b/example-pipeline.gocd.yml
@@ -20,4 +20,5 @@ pipelines:
               tasks:
                 - exec:
                     command: docker
-                    arguments: -v
+                    arguments:
+                      - -v
