--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo 'Success!'"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "kafkajs": "^2.2.0"
+  }
 }
