fix command for node -v

--- a/example-pipeline.gocd.yml
+++ b/example-pipeline.gocd.yml
@@ -19,5 +19,5 @@ pipelines:
                     command: docker
                     arguments:
                       - run
-                      - -v $(pwd)/app:/app node
+                      - -v $(pwd)/app:/app node:16
                       - npm install
