convert to single job task

--- a/example-pipeline.gocd.yml
+++ b/example-pipeline.gocd.yml
@@ -7,21 +7,22 @@ pipelines:
         git: https://github.com/MattLishmanCtM/gocd-test
         destination: app
     stages:
-      - test:
+      - install:
+          fetch_materials: yes
+          clean_workspace: yes
           jobs:
-            install:
-              tasks:
-                - exec:
-                    command: bash
-                    arguments:
-                      - -c
-                      - >
-                        docker run node:16
-                        node -v
-                - exec:
-                    command: bash
-                    arguments:
-                      - -c
-                      - >
-                        docker run -v $(pwd)/app:/app node:16
-                        npm install
+            tasks:
+              - exec:
+                  command: bash
+                  arguments:
+                    - -c
+                    - >
+                      docker run node:16
+                      node -v
+              - exec:
+                  command: bash
+                  arguments:
+                    - -c
+                    - >
+                      docker run -v $(pwd)/app:/app node:16
+                      npm install
