--- a/pipeline.gocd.yml
+++ b/pipeline.gocd.yml
@@ -1,8 +1,7 @@
 format_version: 10
+environment_variables:
+  APP_PATH: $(pwd)/app
 pipelines:
-  environment_variables:
-#    APP_PATH: $(pwd)/app
-    APP_PATH: $(pwd)/app
   testpipeline:
     group: platform
     materials:
@@ -27,6 +26,6 @@ pipelines:
                     docker run -v $APP_PATH:/app -v $APP_PATH/node_modules:node_modules node:16
                     npm install
           artifacts:
-            - node_modules:
+            - build:
                 source: node_modules/
                 destination: node_modules
